@@ -31,7 +31,7 @@ function algoliasearch(applicationID, apiKey, opts) {
     opts.protocol = 'https:';
   }
 
-  opts._ua = algoliasearch.ua;
+  opts._ua = opts._ua || algoliasearch.ua;
   opts._useCache = false;
 
   return new AlgoliaSearchNodeJS(applicationID, apiKey, opts);
